<resources>
    <string name="app_name">Decade Of Movies</string>
    <string name="search_on_movie">Search on movie</string>
    <string name="year">Year: %1$s</string>
    <string name="rating">Rating: %1$s</string>
    <string name="empty_movies_list_message">There are not movies right now!</string>
    <string name="empty_search_movies_list_message">There are not movies with this title!</string>
    <string name="cast_members">Cast Members:</string>
    <string name="genres">Genres:</string>
    <string name="photos">Photos:</string>
    <string name="empty_photos_for_film_message">There are not any photos for this film!</string>
</resources>